feat: added rabbitmq for k8s, karpenter and private registry for helm charts

--- a/API-Gateway/cluster/create-cluster.yaml
+++ b/API-Gateway/cluster/create-cluster.yaml
@@ -3,9 +3,9 @@ apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
   - role: control-plane
     extraPortMappings:
-      - hostPort: 8080
-        containerPort: 31437
+      - containerPort: 31437
+        hostPort: 8080
         protocol: TCP
-      - hostPort: 8443
-        containerPort: 31438
+      - containerPort: 31438
+        hostPort: 8443
         protocol: TCP
